# mmtvu-entertainment

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  python-tests.yml
docs/: landing-page-psychology-research.md  landing-page-truthfulness-audit-2026-07-09.md  mmtvu-ai-automation-holding-company-design-2026-07-08.md  revenue-os-v1-evidence-loop-plan-2026-07-09.md
docs/adr/: 0001-no-speculative-persistence-in-ops-crm.md  0002-prospect-list-funnel-controls.md  0003-funnel-high-water-mark.md
landing/: index.html
offers/: home-service-ai-follow-up-starter.md
ops-crm/: .gitignore  README.md  db.py  generate.py  index.html  record_outreach.py  redaction.py  serve.py
ops-crm/data/public/: assets.json  daily-brief.md  evidence.json  experiments.json  loops.json  metrics.json  next_actions.json  offers.json  prospects.json  summary.json
ops-crm/schemas/: asset.schema.json  next_action.schema.json  offer.schema.json  prospect.schema.json
ops-crm/tests/: test_dashboard_static.py  test_db.py  test_evidence_gates.py  test_generate.py  test_record_outreach.py  test_redaction.py  test_serve.py  test_smoke_p0.py
