[project]
name = "mmtvu-entertainment"
version = "0.1.0"
description = "MMTVUEntertainment operator tooling"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["ops-crm/tests"]
pythonpath = ["."]
